# CodeEvolution

./: .gitignore  AGENTS.md  CLAUDE.md  Reference.md  pyproject.toml  run.bat  vram.bat
codeevolve/: base_proxy.py  bundler.py  claude_proxy.py  cli.py  codex_proxy.py  config.py  crate_graph.py  file_discovery.py  import_graph.py  init_project.py  ledger.py  llama_server.py  mixed_proxy.py  runner.py  scheduler.py  summary.py
codeevolve/defaults/: evolution.yaml
codeevolve/evaluator/: __init__.py  benchmark.py  cargo.py  llm_fixer.py  llm_judge.py  pipeline.py
codeevolve/prompts/: diff_user.txt  full_rewrite_user.txt
codeevolve/templates/: evaluator.py.j2
docs/: AIDDA-writeup.md
docs/plans/: 2026-04-10-workspace-evolution-interview.md  2026-04-11-algorithm-audit-fixes-interview.md  2026-04-11-checkpoint-resume-interview.md
docs/superpowers/plans/: 2026-04-09-codeevolution.md  2026-04-10-llama-server-migration.md  2026-04-10-workspace-mutator.md
docs/superpowers/specs/: 2026-04-09-codeevolution-design.md  2026-04-10-workspace-mutator-design.md
tests/: conftest.py  test_benchmark.py  test_bundler.py  test_cargo.py  test_claude_proxy.py  test_cli.py  test_codex_proxy.py  test_config.py  test_crate_graph.py  test_file_discovery.py  test_import_graph.py  test_init_project.py  test_integration.py  test_integration_checkpoint.py  test_ledger.py  test_llama_server.py  test_llm_judge.py  test_metrics_csv.py  test_pipeline.py  test_rotation.py  test_runner.py  test_scheduler.py  test_summary.py  test_workspace_pipeline.py
tests/fixtures/: clippy_output.json
(+9 files in other folders)
