[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeevolve"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "openevolve>=0.2.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
codeevolve = "codeevolve.cli:main"
